Kubernetes/Practice/2 -bmuschko/deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy 
  labels:
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      name: nginx
      labels:
        app: v1
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
