Kubernetes/Practice/2 -bmuschko/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend 
spec:
  containers:
  - name: backend 
    image: nginx 
---
  
apiVersion: v1
kind: Pod
metadata:
  name: secured 
spec:
  serviceAccountName: backend-team
  securityContext:
    runAsGroup: 3000
  containers:
  - name: backend 
    image: nginx 
    volumeMounts:
    - mountPath: /data/app
      name:   volume   
  volumes:
  - name: volume 
    emptyDir: {}  
    
---
  
apiVersion: v1
kind: Pod
metadata:
  name: adapter  
spec:
  containers:

  - name: app  
    image: busybox 
    args: ['/bin/sh','-c','while true; do echo "$(date) | $(du -sh ~)" >> /var/logs/diskspace.txt; sleep 5; done;']
    volumeMounts:
    - mountPath: /var/logs
      name:  cache-volume
    
    
  - name: transformer  
    image: busybox  
    args: ['/bin/sh','-c','sleep 20; while true; do while read LINE; do echo "$LINE" | cut -f2 -d"|" >> $(date +%Y-%m-%d-%H-%M-%S)-transformed.txt; done < /var/logs/diskspace.txt; sleep 20; done;']   
    volumeMounts:
    - mountPath: /var/logs
      name:  cache-volume

  volumes:
  - name: cache-volume
    emptyDir: {}

---
  
apiVersion: v1
kind: Pod
metadata:
  name: hello   
spec:
  containers:

  - name: hello  
    image: bonomat/nodejs-hello-world 
    ports: 
    -  containerPort: 3000  
       name: nodejs-port
    readinessProbe:
      httpGet:
        path: /
        port: nodejs-port   
      initialDelaySeconds: 2  
    livenessProbe:
      httpGet:
        path: /
        port: nodejs-port   
      initialDelaySeconds: 5   
      periodSeconds: 8

---

apiVersion: v1
kind: Pod
metadata:
  
  labels:
    run: failing-pod
  name: failing-pod
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo $(date) >> ~/tmp/curr-date.txt; sleep 5; done;
    image: busybox
    name: failing-pod
---
  
apiVersion: v1
kind: Pod
metadata:
  name: frontend  
  labels:
    env: prod 
    team: shiny
  annotations:
    contact: John Doe
    commit: 2d3mg3 
spec:
  containers:
  - name: hello  
    image: nginx  

---
  
apiVersion: v1
kind: Pod
metadata:
  name: backend  
  labels:
      env: prod
      team: legacy
      app: v1.2.4
  annotations:
    contact: Mary Harris
spec:
  containers:
  - name: hello  
    image: nginx 

---
  
apiVersion: v1
kind: Pod
metadata:
  name: database   
  labels:
    env: prod
    team: storage
spec:
  containers:
  - name: hello  
    image: nginx
