Kubernetes/Practice/2 -bmuschko/pv.yaml

apiVersion: v1
kind: Pod
metadata:
  name: app    
  
spec:
  containers:
  - name: app  
    image: nginx  
    volumeMounts:
    -  name: volume-pv
       mountPath: /var/app/config

  volumes:
  - name: volume-pv
    persistentVolumeClaim:
        claimName: pvc
